# MCPAudit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  security_finding.yml
.github/workflows/: action-validate.yml  ci.yml  release.yml  scoring-v2.yml  test-gate.yml
.mcts/: policy.yaml.example
action/: README.md  action.yml
docs/: README.md  architecture.md  ci-integration.md  cli.md  competitive-positioning.md  feature-expansion-plan.md  fuzzing.md  getting-started.md  glossary.md  html-report.md  index.md  inventory.md  live-scanning.md  roadmap.md  scoring-spec.md  taxonomy.md  typescript-discovery.md
docs/analysis/: README.md  adr-003-scoring-v2.md  architecture.md  security-checks.md
docs/contributing/: issue-labeling.md
docs/get-started/: README.md  getting-started.md
docs/migration/: scoring-v2.md
docs/more/: README.md  external-frameworks.md  feature-expansion-plan.md  planned-cli.md  product-positioning.md  roadmap.md
docs/platform/: README.md  ci-integration.md  cli.md  rest-api.md
docs/reporting/: README.md  findings-trust-phase0.md  html-report.md  interpreting-findings.md  scoring-guide.md  scoring-spec-v2.md  (+2 more)
scripts/: cli_end_to_end.sh  cli_smoke.sh  compile_sigma_rules.py  enable-branch-protection.sh  generate_scan_demo_gif.py  run_behavioral_regression.py  validate_trust_layer.py
tests/: __init__.py  test_analyzers.py  test_api_limits.py  test_auto_scan.py  test_behavioral_eval.py  test_behavioral_probe.py  test_behavioral_regression_script.py  test_category_gates.py  test_cli_gates_v2.py  test_compliance.py  test_crosswalk.py  test_discovery.py  test_discovery_js.py  test_discovery_meta.py  test_doctor.py  test_embedding_secrets.py  test_fuzz.py  test_governance.py  test_html_report.py  test_instruction_discovery.py  test_inventory.py  test_inventory_scan_all_gates.py  test_layout.py  test_live_probe.py  test_llm_metadata_triage.py  test_mcp_client.py  test_mcp_server.py  test_module_taint.py  test_new_features.py  test_pentest.py  test_phase3_features.py  test_prompt_dedupe.py  test_readiness_and_api.py  test_saf_analyzers.py  test_sarif.py  test_scanner.py  test_scoring.py  test_scoring_partition.py  test_semantic.py  test_sigma_compile.py  (+8 more)
(+413 files in other folders)
